--- a/old_gods/Cargo.toml
+++ b/old_gods/Cargo.toml
@@ -26,7 +26,10 @@ version = "0.3.32"
 features = [
   "KeyboardEvent",
   "Location",
-  "Performance"
+  "Performance",
+  "Blob",
+  "FileList",
+  "FileReader"
 ]
 #[dependencies.sdl2]
 #version = "0.32.0"
