starting on rendering

--- a/examples/loading-maps/Cargo.toml
+++ b/examples/loading-maps/Cargo.toml
@@ -51,6 +51,7 @@ features = [
   "FileList",
   "FileReader",
   "HtmlCanvasElement",
+  "HtmlImageElement",
   "Request",
   "RequestInit",
   "RequestMode",
