--- a/old_gods/Cargo.toml
+++ b/old_gods/Cargo.toml
@@ -24,6 +24,7 @@ nom = "5.0.0-beta2"
 [dependencies.web-sys]
 version = "0.3.32"
 features = [
+  "ErrorEvent",
   "KeyboardEvent",
   "Location",
   "Performance",
