--- a/examples/loading-maps/Cargo.toml
+++ b/examples/loading-maps/Cargo.toml
@@ -40,6 +40,11 @@ rev = "afe175fb3ef0d41ff5963dd28b81ef7e83b02232"
 version = "0.15"
 default-features = false
 
+[dependencies.shred]
+version = "0.9.3"
+default-features = false
+features = ["nightly"]
+
 [dependencies.web-sys]
 version = "0.3"
 # Add more web-sys API's as you need them
