--- a/old_gods/Cargo.toml
+++ b/old_gods/Cargo.toml
@@ -42,6 +42,6 @@ version = "0.15"
 default-features = false
 
 [dependencies.shred]
-version = "0.7"
-#default-features = false
-#features = ["nightly"]
+version = "0.9.3"
+default-features = false
+features = ["nightly"]
