suggested viewport size from maps, inner rendering context stub

--- a/examples/loading-maps/Cargo.toml
+++ b/examples/loading-maps/Cargo.toml
@@ -59,7 +59,8 @@ features = [
   "RequestInit",
   "RequestMode",
   "Response",
-  "TextMetrics"
+  "TextMetrics",
+  "Window"
 ]
 
 [dev-dependencies]
