--- a/examples/loading-maps/Cargo.toml
+++ b/examples/loading-maps/Cargo.toml
@@ -32,9 +32,9 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 wee_alloc = { version = "0.4.2", optional = true }
 
 [dependencies.mogwai]
-#path = "../../../mogwai/mogwai"
-git = "https://github.com/schell/mogwai.git"
-rev = "afe175fb3ef0d41ff5963dd28b81ef7e83b02232"
+path = "/media/schell/orange/Dropbox/code/mogwai/mogwai"
+#git = "https://github.com/schell/mogwai.git"
+#rev = "afe175fb3ef0d41ff5963dd28b81ef7e83b02232"
 
 [dependencies.specs]
 version = "0.15"
