--- a/examples/loading-maps/Cargo.toml
+++ b/examples/loading-maps/Cargo.toml
@@ -16,7 +16,9 @@ old_gods = { path = "../../old_gods" }
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+shred-derive = "0.6"
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
@@ -37,8 +39,9 @@ path = "/media/schell/orange/Dropbox/code/mogwai/mogwai"
 #rev = "afe175fb3ef0d41ff5963dd28b81ef7e83b02232"
 
 [dependencies.specs]
-version = "0.15"
+version = "0.16"
 default-features = false
+features = ["shred-derive"]
 
 [dependencies.shred]
 version = "0.9.3"
