--- a/old_gods/Cargo.toml
+++ b/old_gods/Cargo.toml
@@ -17,9 +17,8 @@ rand = "0.7"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-specs-derive = "0.2"
 shrev = "1.0"
-shred-derive = "0.5"
+shred-derive = "0.6"
 spade = "1.5.1"
 wasm-bindgen = "0.2"
 
@@ -46,8 +45,9 @@ features = [
 #features = [ "mixer", "image", "ttf" ]
 
 [dependencies.specs]
-version = "0.15"
+version = "0.16"
 default-features = false
+features = ["shred-derive"]
 
 [dependencies.shred]
 version = "0.9.3"
