--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -3,4 +3,4 @@ combine_control_expr = false
 format_code_in_doc_comments = true
 max_width = 80
 tab_spaces = 2
-#wrap_long_multiline_chains = true
+format_strings = true
