implement RenderingContext for CanvasRenderingContext2d (#45)
* RenderingContext trait and web canvas impl

* Make a loading-maps drawing fn polymorphic

* from color, measure_text is default impl, render/action compiles

* Revert "Make a loading-maps drawing fn polymorphic"

This reverts commit 3edff353c6c1e567f3fca725a8e813b2712504b8.

* css colors, trait rendering

Co-authored-by: Schell Scivally <efsubenovex@gmail.com>

--- a/old_gods/Cargo.toml
+++ b/old_gods/Cargo.toml
@@ -26,17 +26,22 @@ wasm-bindgen = "0.2"
 [dependencies.web-sys]
 version = "0.3"
 features = [
-  "console",
-  "ErrorEvent",
-  "Gamepad",
-  "GamepadButton",
-  "KeyboardEvent",
-  "Location",
-  "Performance",
   "Blob",
+  "CanvasRenderingContext2d",
+  "console",
+  "Document",
+  "ErrorEvent",
   "FileList",
   "FileReader",
+  "Gamepad",
+  "GamepadButton",
+  "HtmlCanvasElement",
+  "HtmlImageElement",
+  "KeyboardEvent",
+  "Location",
   "Navigator",
+  "Performance",
+  "TextMetrics",
   "Window"
 ]
 #[dependencies.sdl2]
