--- a/old_gods/Cargo.toml
+++ b/old_gods/Cargo.toml
@@ -14,7 +14,7 @@ js-sys = "0.3"
 log = "0.4"
 nom = "5.0.0-beta2"
 rand = "0.7"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
 shrev = "1.0"
@@ -53,6 +53,7 @@ features = [
 version = "0.16"
 default-features = false
 features = ["shred-derive"]
+
 
 [dependencies.shred]
 version = "0.9.3"
