--- a/old_gods/Cargo.toml
+++ b/old_gods/Cargo.toml
@@ -21,6 +21,7 @@ shrev = "1.0"
 shred-derive = "0.6"
 spade = "1.5.1"
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 
 
 [dependencies.web-sys]
@@ -41,6 +42,10 @@ features = [
   "Location",
   "Navigator",
   "Performance",
+  "Request",
+  "RequestInit",
+  "RequestMode",
+  "Response",
   "TextMetrics",
   "Window"
 ]
