--- a/old_gods/Cargo.toml
+++ b/old_gods/Cargo.toml
@@ -17,6 +17,7 @@ rand = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
+serde_path_to_error = { version = "0.1", optional = true }
 shrev = "1.0"
 shred-derive = "0.6"
 spade = "1.5.1"
@@ -64,3 +65,7 @@ features = ["shred-derive"]
 version = "0.9.3"
 default-features = false
 features = ["nightly"]
+
+
+[features]
+default = ["serde_path_to_error"]
