--- a/old_gods/Cargo.toml
+++ b/old_gods/Cargo.toml
@@ -28,6 +28,8 @@ wasm-bindgen-futures = "0.4"
 [dependencies.web-sys]
 version = "0.3"
 features = [
+  "AudioContext",
+  "AudioDestinationNode",
   "Blob",
   "CanvasRenderingContext2d",
   "console",
@@ -37,10 +39,13 @@ features = [
   "FileReader",
   "Gamepad",
   "GamepadButton",
+  "HtmlAudioElement",
   "HtmlCanvasElement",
   "HtmlImageElement",
+  "HtmlMediaElement",
   "KeyboardEvent",
   "Location",
+  "MediaElementAudioSourceNode",
   "Navigator",
   "Performance",
   "Request",
